--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,13 @@
       "arrow-body-style": [
         "error", "as-needed"
       ],
+      "unicorn/filename-case": [
+        "error",
+        {
+          "case": "kebabCase",
+          "ignore": ["use", "App"]
+        }
+      ],
       "unicorn/better-regex": 2,
       "unicorn/explicit-length-check": 2,
       "unicorn/prefer-default-parameters": 2,
