--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.439.0",
     "next": "14.2.5",
+    "node-html-parser": "^6.1.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.46.1",
